# drbd-reactor

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  Makefile  README.md  drbd-reactor.spec  drbd-reactorctl.py  drbdd.spec  shell.nix
debian/: changelog  control  copyright  drbd-reactor.bash-completion  drbd-reactor.examples  rules
doc/: agentx.md  debugger.md  drbd-reactor.1  drbd-reactor.agentx.5  drbd-reactor.debugger.5  drbd-reactor.prometheus.5  drbd-reactor.promoter.5  drbd-reactor.toml.5  drbd-reactor.umh.5  drbd-reactorctl.1  drbdd.1  drbdd.debugger.5  drbdd.prometheus.5  drbdd.promoter.5  drbdd.toml.5  drbdd.umh.5  prometheus.md  promoter.md  umh.md
docker/: Dockerfile-deb  Dockerfile-rpm  Dockerfile.centos  Dockerfile.debian  Dockerfile.rpm  drbdd.spec.patch  entry.sh
e2e-tests/: .flake8  .gitlab-ci.yml  Makefile  README.md  drbd_reactor_test.py
e2e-tests/common/: drbd_config.py  dummy_service.py  reactor_config.py  reactortest.py
e2e-tests/docker/: Dockerfile  entry.sh
e2e-tests/tests/: prometheus.py  promoter_preferred_node.py  promoter_promote.py  umh_role.py
e2e-tests/virter/: drbd-reactor-vmshed.sh  provision-test.sh  provision-test.toml  run.toml  tests.toml  vms.toml
example/: LINBIT-DRBD-MIB.mib  ctl.completion.bash  drbd-reactor-reload.path  drbd-reactor-reload.service  drbd-reactor.service  drbd-reactor.toml  drbdd.service  drbdd.toml  grafana-dashboard.json  ocf.rs@.service  on-no-quorum-io-error.sh  tmpcontroller.sh
src/: config.rs  drbd.rs  drbdstatus.rs  events.rs  lib.rs  main.rs  matchable.rs  plugin.rs  systemd.rs  utils.rs
src/plugin/: agentx.rs  debugger.md  debugger.rs  prometheus.md  prometheus.rs  promoter.md  promoter.rs  umh.md  umh.rs
tests/: connection_paths_map.rs  connection_peerdevices_map.rs  resource_connections_map.rs  resource_devices_map.rs  resource_get_update.rs  resource_update_delete.rs
