[package]
name = "drbd-reactor"
version = "0.7.0-rc.1"
authors = ["Roland Kammerer <roland.kammerer@linbit.com>", "Moritz Wanzenböck <moritz.wanzenboeck@linbit.com>"]
edition = "2018"
description = "Reacts to DRBD events via plugins."
license = "Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
structopt = { version = "0.3", default-features = false }
anyhow = "1.0"
log = { version = "0.4", features = ["serde"] }
fern = ">= 0.5"  # 0.5 becasue it is in Ubuntu Focal/PPA
regex = "1"
glob = "0.3"
libc = "0.2"
signal-hook = ">= 0.1"  # 0.1 because it is in Ubuntu Focal/PPA
tinytemplate = ">= 1.0.3"  # 1.0.3 because it is in Ubuntu Focal/PPA
serde_json = "1.0"
shell-words = ">= 0.1.0" # 0.1.0 because it is in Ubuntu Focal/PPA
